@@ -26,6 +26,7 @@ open Errors
 open Pdfstream
 open Entry
 open Crypto
+open Algo
 
 module IndirectObject = struct
 
@@ -119,7 +120,13 @@ module IndirectObject = struct
     | DirectObject.Null | DirectObject.Bool _ | DirectObject.Int _ | DirectObject.Real _ | DirectObject.String _ | DirectObject.Name _ ->  x
 
   and simplify_refs_dict (objects : t MapKey.t) (ctxt : Errors.error_ctxt) (d : DirectObject.dict_t) : DirectObject.dict_t =
-    DirectObject.dict_map_key (fun key x -> simplify_refs_direct objects (Errors.ctxt_append_name ctxt key) x) d
+    DirectObject.dict_map_key (fun key x ->
+      if Params.global.Params.remove_ptex && Algo.string_starts_with key "PTEX." then (
+        Errors.warning "Removing PTEX entry" (Errors.ctxt_append_name ctxt key);
+        DirectObject.Null
+      ) else
+        simplify_refs_direct objects (Errors.ctxt_append_name ctxt key) x
+      ) d
 
   let simplify_refs (objects : t MapKey.t) (ctxt : Errors.error_ctxt) : t -> t =
     make_map_dict (simplify_refs_direct objects ctxt) (simplify_refs_dict objects ctxt)
